# Bluefors-Alarm-Bot

./: .gitignore  LICENSE  README.md  config.yaml  main.py  pyproject.toml
alarm_bot/: __init__.py  app_context.py  bootstrap.py  cli.py  config.py  path_suggester.py  paths.py  time_utils.py  value_formatter.py
alarm_bot/bluefors/: api_spec.md  client.py  extractor.py  models.py  system_info.py
alarm_bot/logging/: audit.py  events.py
alarm_bot/monitoring/: alert_manager.py  metric_tracking.py  phase_detector.py  poller.py  rules.py
alarm_bot/slack/: actions.py  app.py  commands.py  messages.py  notifier.py  thread_handler.py
alarm_bot/state/: store.py
scripts/: alarm-bot.service  build.ps1  build.sh  run.bat  run.sh  setup.bat  setup.sh
tests/: test_alert_reminders.py  test_audit.py  test_commands.py  test_extractor.py  test_metric_tracking.py  test_path_suggester.py  test_phase_detector.py  test_rules.py  test_status_messages.py  test_system_info.py  test_warmup.py  test_warmup_suppress.py
