[project]
name = "alarm-bot"
version = "0.1.0"
description = "Bluefors Control Software Gen.1 monitor with Slack alerts"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "slack-bolt>=1.21",
    "httpx>=0.27",
    "pydantic-settings>=2.0",
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pyinstaller>=6.0",
]

[project.scripts]
alarm-bot = "alarm_bot.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["alarm_bot"]
